cmake_minimum_required(VERSION 2.7)
PROJECT(msp-tongue-shape-project)

add_subdirectory(apply-rigid-motion/cmake)
add_subdirectory(cloud-purge/cmake)
add_subdirectory(custom-segmentation/cmake)
add_subdirectory(diffusion3d/cmake)
add_subdirectory(extract-slice/cmake)
add_subdirectory(fit-model/cmake)
add_subdirectory(landmark-alignment/cmake)
add_subdirectory(landmark-indexer/cmake)
add_subdirectory(landmark-tool/cmake)
add_subdirectory(match-template/cmake)
add_subdirectory(measure-compactness/cmake)
add_subdirectory(measure-generalization/cmake)
add_subdirectory(measure-specificity/cmake)
add_subdirectory(mesh-add/cmake)
add_subdirectory(mesh-average/cmake)
add_subdirectory(mesh-project/cmake)
add_subdirectory(model-builder/cmake)
add_subdirectory(model-convert/cmake)
add_subdirectory(move-landmarks/cmake)
add_subdirectory(otsu-threshold/cmake)
add_subdirectory(procrustes-alignment/cmake)
add_subdirectory(rigid-alignment/cmake)
add_subdirectory(scan-crop-gui/cmake)
add_subdirectory(scan-crop/cmake)
