cmake_minimum_required(VERSION 2.7)
PROJECT(msp-tongue-shape-project)

add_subdirectory(compute-coordinate-system/cmake)
add_subdirectory(ema-analyze/cmake)
add_subdirectory(ema-coils-compute-mean/cmake)
add_subdirectory(ema-json-to-mesh/cmake)
add_subdirectory(ema-modify/cmake)
add_subdirectory(ema-tracker/cmake)
add_subdirectory(estimate-coil-vertex-correspondence/cmake)
add_subdirectory(estimate-midsagittal-rotation/cmake)
add_subdirectory(estimate-speaker/cmake)
add_subdirectory(find-rigid-coil-vertex-correspondence/cmake)
add_subdirectory(map-to-coordinate-system/cmake)
add_subdirectory(output-mesh-for-correspondence/cmake)
add_subdirectory(palate-contour/cmake)
add_subdirectory(registered-ema-to-mesh-sequence/cmake)
add_subdirectory(estimate-front-mapping/cmake)
