cmake_minimum_required(VERSION 2.7)
PROJECT(cloud-purge)

SET(CMAKE_BUILD_TYPE release)
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -std=c++11 -march=native -Wall -Wextra -pedantic")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -std=c++11 -march=native -Wall -Wextra -pedantic")
INCLUDE(ConfigureANN.cmake)
INCLUDE(ConfigureARMADILLO.cmake)
INCLUDE(ConfigureJSONCPP.cmake)

IF(ANN_FOUND AND ARMADILLO_FOUND AND JSONCPP_FOUND)
  SET(SRC_FILE "../src/bin/main.cpp")

  INCLUDE_DIRECTORIES("../src/include")
  INCLUDE_DIRECTORIES("../../shared_include")
  INCLUDE_DIRECTORIES(${ANN_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(${ARMADILLO_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIR})

  ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILE})
  TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${ANN_LIBRARIES}
    ${ARMADILLO_LIBRARIES}
    ${JSONCPP_LIBRARIES}
    )

  INSTALL (TARGETS ${PROJECT_NAME} DESTINATION bin)

ELSE(ANN_FOUND AND ARMADILLO_FOUND AND JSONCPP_FOUND)
  Message("PROBLEM: One of the required libraries not found. ${PROJECT_NAME} will not be compiled.")
ENDIF(ANN_FOUND AND ARMADILLO_FOUND AND JSONCPP_FOUND)
